# csdb

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-build.yaml  python-testing.yaml
api/: index.html
api/client/: index.html
api/default-variables/: index.html
api/io/: index.html
api/schemas/: index.html
api/sql/: index.html
docs/: api.md  explanation.md  how-to.md  index.md
docs/api/: client.md  default-variables.md  io.md  schemas.md  sql.md
docs/how-to/: get-result.md  put-result.md  put-variable.md
examples/: cli_batch_upload_dss.py
explanation/: index.html
how-to/: index.html
how-to/get-result/: index.html
how-to/put-result/: index.html
how-to/put-variable/: index.html
src/csdb/: __init__.py  client.py  io.py  schemas.py
src/csdb/default/: variables.yaml
src/csdb/default/sql/schema/: 000_create_run.sql  001_create_variable.sql  002_create_result.sql
tests/: conftest.py  test_database_client.py  test_io.py  test_schemas.py
tests/assets/existing/: calculated_values.json  multi_timeseries.hec6.dss  multi_timeseries.hec7.dss  single_run_single_result.db  single_timeseries.2.hec6.dss  single_timeseries.2.hec7.dss  single_timeseries.hec6.dss  single_timeseries.hec7.dss  variables_new.csv  variables_new.yaml
